# glowing-enigma

./: README.md
calibration-room/: README.md
calibration-room/pose_estimation_gui/server/: package-lock.json
other-programs/camera-calibration/: CAMERA_CALIBRATION.md  ParameterResult1_ASTRA_CAMERA.txt  ParameterResult1_LG_GRAM.txt  ParameterResult2_ASTRA_CAMERA.txt  ParameterResult2_LG_GRAM.txt  ParameterResult3_ASTRA_CAMERA.txt  ZHANGS_METHOD.md  history.txt  parameters.txt
other-programs/camera-calibration/src/: camera_info.txt
other-programs/camera-calibration/src/checkboard_camera_calibration/: CMakeLists.txt  package.xml
other-programs/camera-calibration/src/checkboard_camera_calibration/dummy/: kylebmeredith_calibration_exmaple.cpp  opencv_findChessboardCorners_implementation.cpp
other-programs/camera-calibration/src/checkboard_camera_calibration/src/: checkboard_camera_calibrator.cpp  checkboard_camera_undistorter.cpp  checkboard_functions.cpp
other-programs/depth-camera-extrinsic-calibration/: TODO.md
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/: CMakeLists.txt  package.xml
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/include/depth_camera_extrinsic_calibrator/: CameraCalibrator.hpp
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/launch/: dce_launch.launch
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/rviz/: dce_rviz.rviz
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/src/: CameraCalibrator.cpp  CameraCalibratorMain.cpp  dce_calibrator.cpp  dce_calibrator_functions.cpp  dce_initial_calibrator.cpp  dce_undistorter.cpp
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/src/history/: 221109_1108.cpp  _notes.txt  _references.txt  dce_calibrator_tester.txt  parameters_test01.txt
other-programs/depth-camera-extrinsic-calibration/src/depth_camera_extrinsic_calibrator/urdf/: dce_urdf.urdf
other-programs/dual-band-wifi-router/: dual+band+wifi+router+조사본.xlsx  package.json
other-programs/pointcloud2-controller/: notes.txt  references.txt
other-programs/pointcloud2-controller/src/pcl2_controller/: CMakeLists.txt  package.xml
other-programs/pointcloud2-controller/src/pcl2_controller/launch/: pcl2_controller_launch.launch
other-programs/pointcloud2-controller/src/pcl2_controller/rviz/: pcl2_controller_rviz.rviz
other-programs/pointcloud2-controller/src/pcl2_controller/src/: pcl2_controller_function.cpp  pcl2_controller_main.cpp
other-programs/pointcloud2-controller/src/pcl2_controller/urdf/: pcl2_controller_urdf.urdf
other-programs/ros_gui_viewer/: README.md  package-lock.json  package.json  quasar.config.js
other-robot-settings/AP_SETTING/: AP_SETTING.md
other-robot-settings/ASTRA_D2L_SETTING/: ASTRA_D2L_SETTING.md  ASTRA_D2L_SETTING2.md  additional_settings.txt
other-robot-settings/ROS_GUI_SETTING/: ROS_GUI_SETTING.md
other-robot-settings/SSH_FILE_MOVE_SETTING/: SSH_FILE_MOVE_SETTING.md
robot-programming-ojt/: .gitignore  README.md
robot-programming-ojt/assignment/alpha-plus/src/face_detection/: CMakeLists.txt  package.xml
robot-programming-ojt/assignment/alpha-plus/src/face_detection/src/: face_detector.cpp
robot-programming-ojt/assignment/alpha-plus/src/face_detection/src/trial-and-error/: dummy_face_detector.cpp  dummy_face_detector2.cpp  dummy_face_detector_function.cpp
robot-programming-ojt/assignment/alpha/src/turtle_lawnmower/: CMakeLists.txt  package.xml
robot-programming-ojt/assignment/alpha/src/turtle_lawnmower/include/turtle_lawnmower/: TurtleLawnmower.hpp
robot-programming-ojt/assignment/alpha/src/turtle_lawnmower/src/: turtle_lawnmower_function.cpp  turtle_lawnmower_node.cpp
robot-programming-ojt/assignment/delta-plus/src/turtle_to_servinggo/: CMakeLists.txt  package.xml
robot-programming-ojt/assignment/delta-plus/src/turtle_to_servinggo/include/turtle_to_servinggo/: Player.h  Recorder.h  Replayer.h
robot-programming-ojt/assignment/delta-plus/src/turtle_to_servinggo/launch/: turtle_to_servinggo-test.launch
robot-programming-ojt/assignment/delta-plus/src/turtle_to_servinggo/src/: Main.cpp  Player.cpp  Recorder.cpp  Replayer.cpp
robot-programming-ojt/assignment/delta/src/joycontroller/: CMakeLists.txt  package.xml
robot-programming-ojt/assignment/delta/src/joycontroller/include/joycontroller/: DevJoyController.h
robot-programming-ojt/assignment/delta/src/joycontroller/launch/: joycontrol.launch
robot-programming-ojt/assignment/delta/src/joycontroller/src/: DevJoyController_Function.cpp  DevJoyController_Main.cpp
robot-programming-ojt/assignment/gamma/pc-side/src/cv_image_viewer/: CMakeLists.txt  package.xml
robot-programming-ojt/assignment/gamma/pc-side/src/cv_image_viewer/src/: compressed_image_viewing.cpp  decoded_compressed_image_viewing.cpp  image_viewing.cpp
robot-programming-ojt/practices/codes/sample01/src/ros_tutorials_service/: CMakeLists.txt  package.xml
robot-programming-ojt/practices/codes/sample01/src/ros_tutorials_service/src/: service_client.cpp  service_server.cpp
robot-programming-ojt/practices/codes/sample01/src/ros_tutorials_topic/: CMakeLists.txt  package.xml
robot-programming-ojt/practices/codes/sample01/src/ros_tutorials_topic/launch/: union.launch
robot-programming-ojt/practices/codes/sample01/src/ros_tutorials_topic/msg/: MsgTutorial.msg
robot-programming-ojt/practices/codes/sample01/src/ros_tutorials_topic/src/: topic_publisher.cpp  topic_subscriber.cpp
robot-programming-ojt/practices/codes/sample02/src/cv_basics/: CMakeLists.txt  package.xml
robot-programming-ojt/practices/codes/sample02/src/cv_basics/src/: hello.cpp  vector_example.cpp
robot-programming-ojt/practices/codes/sample02/src/image_processing/: CMakeLists.txt  package.xml
robot-programming-ojt/practices/codes/sample02/src/image_processing/src/: get_histogram.cpp  get_histogram_trackbar.cpp  get_histogram_using_opencv_function.cpp
(+79 files in other folders)
